@@ -140,6 +140,8 @@ instance during a sawfish session. [Christopher Bratusek]
 taskbar, tray) instance during a sawfish session [Christopher Bratusek]
 @end itemize
 
+@item Added @code{force-tab} window-matcher, forcing a window to be tabbed. [fuchur]
+
 @end itemize
 @item Removed Features
 @itemize @minus
