@@ -13,6 +13,10 @@
 	* doc/AUTOSTART
 	* man/news.texi: updated
 
+	* lisp/sawfish/wm/tabs/tabgroup.jl
+	* lisp/sawfish/wm/match-window.jl: add force-tab window-matcher,
+	forcing a window to be tabbed
+
 2013-05-02  Vedat Hallac <vedat@hallac.net>
 	* lisp/sawfish/gtk/widget.jl: fix make-choice-item to properly support
 	crux theme settings
